# server/router/api/v1/memo_service.go
@@ -143,6 +143,9 @@ func (s *APIV1Service) CreateMemo(ctx context.Context, request *v1pb.CreateMemoR
 	if request.Memo.Location != nil {
 		create.Payload.Location = convertLocationToStore(request.Memo.Location)
 	}
+	if request.Memo.PdfAnnotation != nil {
+		create.Payload.PdfAnnotation = convertPdfAnnotationToStore(request.Memo.PdfAnnotation)
+	}
 
 	memo, err := s.Store.CreateMemo(ctx, create)
 	if err != nil {
@@ -574,6 +577,10 @@ func (s *APIV1Service) UpdateMemo(ctx context.Context, request *v1pb.UpdateMemoR
 		} else if path == "location" {
 			payload := memo.Payload
 			payload.Location = convertLocationToStore(request.Memo.Location)
+			update.Payload = payload
+		} else if path == "pdf_annotation" {
+			payload := memo.Payload
+			payload.PdfAnnotation = convertPdfAnnotationToStore(request.Memo.PdfAnnotation)
 			update.Payload = payload
 		} else if path == "attachments" {
 			if err := s.setMemoAttachmentsInternal(ctx, user, memo, request.Memo.Attachments); err != nil {
